@startuml
'https://plantuml.com/sequence-diagram

class Pawn
abstract class BaseBot
class RandomBot
    
Pawn <|-- BaseBot
BaseBot <|-- RandomBot

'-----Model-----'
    
class ModelCommunication #brown

class Cell
    
ModelCommunication o- ViewCommunication

ModelCommunication *-- Cell
    
'-----View-----'

interface IView
    
class ViewCommunication #brown

class CellHighlighter
class CellStorage
class CellVisual
class PawnMover
    
IView <|..  ViewCommunication

ViewCommunication o-- CellHighlighter
ViewCommunication o-- PawnMover
CellHighlighter o-- CellStorage
PawnMover o-- CellStorage
CellStorage o-- CellVisual

'-----Controller-----'

interface IController

class ControllerCommunication #brown

class GameModeController
class CellButton

IController <|.. ControllerCommunication

ControllerCommunication *- ModelCommunication

ControllerCommunication o-- GameModeController
CellButton o-- ControllerCommunication



@enduml